# ccmix

./: CMakeLists.txt  LICENSE.md  README.md  test_machine.cpp  test_word.cpp
ccmix/: field_spec.hpp  machine.hpp  word.hpp
